ParentSettingId & AdvancedUnlock Done

--- a/src/Winhance.UI/Features/Common/Localization/af.json
+++ b/src/Winhance.UI/Features/Common/Localization/af.json
@@ -1458,7 +1458,7 @@
   "Setting_gaming-sysmain-service_Option_2": "Outomaties (Aanbeveel vir HDD)",
   "Setting_power-plan-selection_Description": "Kies die aktiewe kragplan vir jou stelsel",
   "Dialog_AdvancedPowerWarning_Title": "Gevorderde Instelling Waarskuwing",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ Gevorderde Krag Instelling Waarskuwing\n\nHierdie instelling word nie normaalweg in Windows Kragopsies blootgestel nie en vereis registerwysigings om toegang te verkry.\n\nOm dit verkeerd te wysig mag veroorsaak:\n• Stelselonstabiliteit of onverwagte gedrag\n• Verrigtingdegradasie\n• Termiese bestuur probleme\n• Instellings mag nie op alle SVE tipes werk nie (moderne HWP vs nalatenskap)\n\nVerander dit slegs as jy verwerker kragbestuur verstaan.\n\nIs jy seker jy wil hierdie instelling wysig?",
+  "Dialog_AdvancedPowerWarning_Message": "Hierdie instelling word nie normaalweg in Windows Kragopsies blootgestel nie en vereis registerwysigings om toegang te verkry.\n\nOm dit verkeerd te wysig mag veroorsaak:\n• Stelselonstabiliteit of onverwagte gedrag\n• Verrigtingdegradasie\n• Termiese bestuur probleme\n• Instellings mag nie op alle SVE tipes werk nie (moderne HWP vs nalatenskap)\n\nVerander dit slegs as jy verwerker kragbestuur verstaan.\n\nIs jy seker jy wil hierdie instelling wysig?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Moenie hierdie waarskuwing weer wys vir gevorderde kraginstellings nie",
   "Button_Unlock": "Ontsluit",
   "Common_ClickToUnlock": "Klik om te ontsluit",
