--- a/src/Winhance.UI/Features/Common/Localization/el.json
+++ b/src/Winhance.UI/Features/Common/Localization/el.json
@@ -1458,7 +1458,7 @@
   "Setting_gaming-sysmain-service_Option_2": "Αυτόματο (Προτείνεται για HDD)",
   "Setting_power-plan-selection_Description": "Επιλέξτε το ενεργό σχέδιο ενέργειας για το σύστημά σας",
   "Dialog_AdvancedPowerWarning_Title": "Προειδοποίηση Προηγμένης Ρύθμισης",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ Προειδοποίηση Προηγμένης Ρύθμισης Ενέργειας\n\nΑυτή η ρύθμιση δεν εκτίθεται κανονικά στις Επιλογές Ενέργειας των Windows και απαιτεί τροποποιήσεις μητρώου για πρόσβαση.\n\nΗ λανθασμένη τροποποίησή της μπορεί να προκαλέσει:\n• Αστάθεια συστήματος ή απροσδόκητη συμπεριφορά\n• Υποβάθμιση απόδοσης\n• Προβλήματα θερμικής διαχείρισης\n• Οι ρυθμίσεις ενδέχεται να μην λειτουργούν σε όλους τους τύπους CPU (σύγχρονες HWP έναντι παλαιότερων)\n\nΑλλάξτε το μόνο αν καταλαβαίνετε τη διαχείριση ενέργειας επεξεργαστή.\n\nΕίστε σίγουροι ότι θέλετε να τροποποιήσετε αυτή τη ρύθμιση;",
+  "Dialog_AdvancedPowerWarning_Message": "Αυτή η ρύθμιση δεν εκτίθεται κανονικά στις Επιλογές Ενέργειας των Windows και απαιτεί τροποποιήσεις μητρώου για πρόσβαση.\n\nΗ λανθασμένη τροποποίησή της μπορεί να προκαλέσει:\n• Αστάθεια συστήματος ή απροσδόκητη συμπεριφορά\n• Υποβάθμιση απόδοσης\n• Προβλήματα θερμικής διαχείρισης\n• Οι ρυθμίσεις ενδέχεται να μην λειτουργούν σε όλους τους τύπους CPU (σύγχρονες HWP έναντι παλαιότερων)\n\nΑλλάξτε το μόνο αν καταλαβαίνετε τη διαχείριση ενέργειας επεξεργαστή.\n\nΕίστε σίγουροι ότι θέλετε να τροποποιήσετε αυτή τη ρύθμιση;",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Να μην εμφανιστεί ξανά αυτή η προειδοποίηση για προηγμένες ρυθμίσεις ενέργειας",
   "Button_Unlock": "Ξεκλείδωμα",
   "Common_ClickToUnlock": "Κάντε κλικ για ξεκλείδωμα",
