--- a/src/Winhance.UI/Features/Common/Localization/ru.json
+++ b/src/Winhance.UI/Features/Common/Localization/ru.json
@@ -1458,7 +1458,7 @@
   "Setting_gaming-sysmain-service_Option_2": "Автоматически (рекомендуется для HDD)",
   "Setting_power-plan-selection_Description": "Выберите активный план электропитания для вашей системы",
   "Dialog_AdvancedPowerWarning_Title": "Предупреждение о расширенных настройках",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ Предупреждение о расширенных настройках электропитания\n\nЭта настройка обычно не отображается в параметрах электропитания Windows и требует изменения реестра для доступа.\n\nНеправильное изменение может вызвать:\n• Нестабильность системы или неожиданное поведение\n• Снижение производительности\n• Проблемы с управлением температурой\n• Настройки могут не работать на всех типах ЦП (современные HWP по сравнению с устаревшими)\n\nИзменяйте это, только если вы понимаете управление питанием процессора.\n\nВы уверены, что хотите изменить эту настройку?",
+  "Dialog_AdvancedPowerWarning_Message": "Эта настройка обычно не отображается в параметрах электропитания Windows и требует изменения реестра для доступа.\n\nНеправильное изменение может вызвать:\n• Нестабильность системы или неожиданное поведение\n• Снижение производительности\n• Проблемы с управлением температурой\n• Настройки могут не работать на всех типах ЦП (современные HWP по сравнению с устаревшими)\n\nИзменяйте это, только если вы понимаете управление питанием процессора.\n\nВы уверены, что хотите изменить эту настройку?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Не показывать это предупреждение снова для расширенных настроек электропитания",
   "Button_Unlock": "Разблокировать",
   "Common_ClickToUnlock": "Нажмите, чтобы разблокировать",
