--- a/src/Winhance.UI/Features/Common/Localization/uk.json
+++ b/src/Winhance.UI/Features/Common/Localization/uk.json
@@ -1458,7 +1458,7 @@
   "Setting_gaming-sysmain-service_Option_2": "Автоматично (рекомендовано для HDD)",
   "Setting_power-plan-selection_Description": "Виберіть активний план живлення для вашої системи",
   "Dialog_AdvancedPowerWarning_Title": "Попередження про розширені налаштування",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ Попередження про розширені налаштування живлення\n\nЦе налаштування зазвичай не відображається в параметрах живлення Windows і вимагає змін у реєстрі для доступу.\n\nНеправильна зміна може спричинити:\n• Нестабільність системи або несподівану поведінку\n• Зниження продуктивності\n• Проблеми з керуванням температурою\n• Налаштування можуть не працювати на всіх типах ЦП (сучасні HWP проти застарілих)\n\nЗмінюйте це, лише якщо ви розумієте керування живленням процесора.\n\nВи впевнені, що хочете змінити це налаштування?",
+  "Dialog_AdvancedPowerWarning_Message": "Це налаштування зазвичай не відображається в параметрах живлення Windows і вимагає змін у реєстрі для доступу.\n\nНеправильна зміна може спричинити:\n• Нестабільність системи або несподівану поведінку\n• Зниження продуктивності\n• Проблеми з керуванням температурою\n• Налаштування можуть не працювати на всіх типах ЦП (сучасні HWP проти застарілих)\n\nЗмінюйте це, лише якщо ви розумієте керування живленням процесора.\n\nВи впевнені, що хочете змінити це налаштування?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Більше не показувати це попередження для розширених налаштувань живлення",
   "Button_Unlock": "Розблокувати",
   "Common_ClickToUnlock": "Натисніть, щоб розблокувати",
