--- a/src/Winhance.UI/Features/Common/Localization/cs.json
+++ b/src/Winhance.UI/Features/Common/Localization/cs.json
@@ -1458,7 +1458,7 @@
   "Setting_gaming-sysmain-service_Option_2": "Automaticky (doporučeno pro HDD)",
   "Setting_power-plan-selection_Description": "Vyberte aktivní plán napájení pro váš systém",
   "Dialog_AdvancedPowerWarning_Title": "Varování pokročilého nastavení",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ Varování pokročilého nastavení napájení\n\nToto nastavení není běžně zobrazeno v Možnostech napájení systému Windows a vyžaduje úpravy registru pro přístup.\n\nNesprávná úprava může způsobit:\n• Nestabilitu systému nebo neočekávané chování\n• Snížení výkonu\n• Problémy s řízením teploty\n• Nastavení nemusí fungovat na všech typech CPU (moderní HWP vs. starší)\n\nZměňte toto pouze v případě, že rozumíte správě napájení procesoru.\n\nJste si jisti, že chcete toto nastavení změnit?",
+  "Dialog_AdvancedPowerWarning_Message": "Toto nastavení není běžně zobrazeno v Možnostech napájení systému Windows a vyžaduje úpravy registru pro přístup.\n\nNesprávná úprava může způsobit:\n• Nestabilitu systému nebo neočekávané chování\n• Snížení výkonu\n• Problémy s řízením teploty\n• Nastavení nemusí fungovat na všech typech CPU (moderní HWP vs. starší)\n\nZměňte toto pouze v případě, že rozumíte správě napájení procesoru.\n\nJste si jisti, že chcete toto nastavení změnit?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Příště toto varování pro pokročilá nastavení napájení nezobrazovat",
   "Button_Unlock": "Odemknout",
   "Common_ClickToUnlock": "Kliknutím odemknete",
