--- a/src/Winhance.UI/Features/Common/Localization/de.json
+++ b/src/Winhance.UI/Features/Common/Localization/de.json
@@ -1458,7 +1458,7 @@
   "Setting_gaming-sysmain-service_Option_2": "Automatisch (empfohlen für HDD)",
   "Setting_power-plan-selection_Description": "Wählen Sie den aktiven Energiesparplan für Ihr System aus",
   "Dialog_AdvancedPowerWarning_Title": "Warnung vor erweiterten Einstellungen",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ Warnung vor erweiterten Energieeinstellungen\n\nDiese Einstellung wird normalerweise nicht in den Windows-Energieoptionen angezeigt und erfordert Registrierungsänderungen für den Zugriff.\n\nEine falsche Änderung kann zu Folgendem führen:\n• Systeminstabilität oder unerwartetes Verhalten\n• Leistungsabfall\n• Probleme mit dem Wärmemanagement\n• Einstellungen funktionieren möglicherweise nicht auf allen CPU-Typen (moderne HWP vs. Legacy)\n\nÄndern Sie dies nur, wenn Sie die Prozessor-Energieverwaltung verstehen.\n\nSind Sie sicher, dass Sie diese Einstellung ändern möchten?",
+  "Dialog_AdvancedPowerWarning_Message": "Diese Einstellung wird normalerweise nicht in den Windows-Energieoptionen angezeigt und erfordert Registrierungsänderungen für den Zugriff.\n\nEine falsche Änderung kann zu Folgendem führen:\n• Systeminstabilität oder unerwartetes Verhalten\n• Leistungsabfall\n• Probleme mit dem Wärmemanagement\n• Einstellungen funktionieren möglicherweise nicht auf allen CPU-Typen (moderne HWP vs. Legacy)\n\nÄndern Sie dies nur, wenn Sie die Prozessor-Energieverwaltung verstehen.\n\nSind Sie sicher, dass Sie diese Einstellung ändern möchten?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Diese Warnung für erweiterte Energieeinstellungen nicht mehr anzeigen",
   "Button_Unlock": "Entsperren",
   "Common_ClickToUnlock": "Zum Entsperren klicken",
