--- a/src/Winhance.UI/Features/Common/Localization/es.json
+++ b/src/Winhance.UI/Features/Common/Localization/es.json
@@ -1458,7 +1458,7 @@
   "Setting_gaming-sysmain-service_Option_2": "Automático (Recomendado para HDD)",
   "Setting_power-plan-selection_Description": "Selecciona el plan de energía activo para tu sistema",
   "Dialog_AdvancedPowerWarning_Title": "Advertencia de Configuración Avanzada",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ Advertencia de Configuración Avanzada de Energía\n\nEsta configuración normalmente no está expuesta en las Opciones de Energía de Windows y requiere modificaciones del registro para acceder a ella.\n\nModificarla incorrectamente puede causar:\n• Inestabilidad del sistema o comportamiento inesperado\n• Degradación del rendimiento\n• Problemas de gestión térmica\n• Es posible que la configuración no funcione en todos los tipos de CPU (HWP moderno vs heredado)\n\nSolo cambia esto si comprendes la administración de energía del procesador.\n\n¿Estás seguro de que quieres modificar esta configuración?",
+  "Dialog_AdvancedPowerWarning_Message": "Esta configuración normalmente no está expuesta en las Opciones de Energía de Windows y requiere modificaciones del registro para acceder a ella.\n\nModificarla incorrectamente puede causar:\n• Inestabilidad del sistema o comportamiento inesperado\n• Degradación del rendimiento\n• Problemas de gestión térmica\n• Es posible que la configuración no funcione en todos los tipos de CPU (HWP moderno vs heredado)\n\nSolo cambia esto si comprendes la administración de energía del procesador.\n\n¿Estás seguro de que quieres modificar esta configuración?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "No volver a mostrar esta advertencia para configuraciones avanzadas de energía",
   "Button_Unlock": "Desbloquear",
   "Common_ClickToUnlock": "Haz clic para desbloquear",
