--- a/src/Winhance.UI/Features/Common/Localization/lt.json
+++ b/src/Winhance.UI/Features/Common/Localization/lt.json
@@ -1458,7 +1458,7 @@
   "Setting_gaming-sysmain-service_Option_2": "Automatinis (rekomenduojama HDD)",
   "Setting_power-plan-selection_Description": "Pasirinkite aktyvų energijos planą savo sistemai",
   "Dialog_AdvancedPowerWarning_Title": "Išplėstinio nustatymo įspėjimas",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ Išplėstinio energijos nustatymo įspėjimas\n\nŠis nustatymas paprastai nerodomas Windows energijos parinktyse ir reikalauja registro modifikacijų, kad būtų pasiekiamas.\n\nNetinkamai jį modifikavus, gali kilti:\n• Sistemos nestabilumas ar netikėta elgsena\n• Našumo pablogėjimas\n• Šilumos valdymo problemos\n• Nustatymai gali neveikti visų tipų procesoriuose (šiuolaikiniuose HWP ir senuosiuose)\n\nKeiskite tai tik jei suprantate procesoriaus energijos valdymą.\n\nAr tikrai norite modifikuoti šį nustatymą?",
+  "Dialog_AdvancedPowerWarning_Message": "Šis nustatymas paprastai nerodomas Windows energijos parinktyse ir reikalauja registro modifikacijų, kad būtų pasiekiamas.\n\nNetinkamai jį modifikavus, gali kilti:\n• Sistemos nestabilumas ar netikėta elgsena\n• Našumo pablogėjimas\n• Šilumos valdymo problemos\n• Nustatymai gali neveikti visų tipų procesoriuose (šiuolaikiniuose HWP ir senuosiuose)\n\nKeiskite tai tik jei suprantate procesoriaus energijos valdymą.\n\nAr tikrai norite modifikuoti šį nustatymą?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Daugiau nerodyti šio įspėjimo dėl išplėstinių energijos nustatymų",
   "Button_Unlock": "Atrakinti",
   "Common_ClickToUnlock": "Spustelėkite, kad atrakintumėte",
