--- a/src/Winhance.UI/Features/Common/Localization/pt.json
+++ b/src/Winhance.UI/Features/Common/Localization/pt.json
@@ -1458,7 +1458,7 @@
   "Setting_gaming-sysmain-service_Option_2": "Automático (Recomendado para HDD)",
   "Setting_power-plan-selection_Description": "Selecione o plano de energia ativo para o seu sistema",
   "Dialog_AdvancedPowerWarning_Title": "Aviso de Definição Avançada",
-  "Dialog_AdvancedPowerWarning_Message": "⚠️ Aviso de Definição de Energia Avançada\n\nEsta definição não é normalmente exposta nas Opções de Energia do Windows e requer modificações no registo para aceder.\n\nModificá-la incorretamente pode causar:\n• Instabilidade do sistema ou comportamento inesperado\n• Degradação do desempenho\n• Problemas de gestão térmica\n• As definições podem não funcionar em todos os tipos de CPU (moderno HWP vs legado)\n\nAltere isto apenas se compreender a gestão de energia do processador.\n\nTem a certeza de que quer modificar esta definição?",
+  "Dialog_AdvancedPowerWarning_Message": "Esta definição não é normalmente exposta nas Opções de Energia do Windows e requer modificações no registo para aceder.\n\nModificá-la incorretamente pode causar:\n• Instabilidade do sistema ou comportamento inesperado\n• Degradação do desempenho\n• Problemas de gestão térmica\n• As definições podem não funcionar em todos os tipos de CPU (moderno HWP vs legado)\n\nAltere isto apenas se compreender a gestão de energia do processador.\n\nTem a certeza de que quer modificar esta definição?",
   "Dialog_AdvancedPowerWarning_DontShowAgain": "Não mostrar este aviso novamente para definições de energia avançadas",
   "Button_Unlock": "Desbloquear",
   "Common_ClickToUnlock": "Clique para desbloquear",
